prod/src/objects/Org__c.object
<CustomObject>
    <description>An Organization is our customer, a company that uses clay.</description>
    <fields>
        <fullName>EmailInfo__c</fullName>
        <label>EmailInfo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldKey__c</fullName>
        <label>OldKey</label>
        <type>Email</type>
    </fields>
    <label>Org</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>OldKey__c</columns>
        <columns>EmailInfo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>